fix: corrected Screenshot component image sizing and updated global text sizing and spacing

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -42,37 +42,27 @@
   /* Text size and line height */
   --sl-text-xs: 0.8125rem; /* 13px */
   --sl-text-sm: 0.9rem; /* 14.4px */
-  --sl-text-base: 1.063rem; /* 16px */
+  --sl-text-base: 1rem; /* 16px */
   --sl-text-lg: 1.125rem; /* 18px */
   --sl-text-xl: 1.25rem; /* 20px */
   --sl-text-2xl: 1.5rem; /* 24px */
-  --sl-text-3xl: 1.8125rem; /* 29px */
-  --sl-text-4xl: 2.1875rem; /* 35px */
-  --sl-text-5xl: 2.625rem; /* 42px */
-  --sl-text-6xl: 4rem; /* 64px */
+  --sl-text-3xl: 1.75rem; /* 28px */
+  --sl-text-4xl: 2rem; /* 32px */
+  --sl-text-5xl: 2.25rem; /* 36px */
+  --sl-text-6xl: 3rem; /* 48px */
 
   --sl-text-body: var(--sl-text-base);
   --sl-text-body-sm: var(--sl-text-xs);
   --sl-text-code: var(--sl-text-sm);
   --sl-text-code-sm: var(--sl-text-xs);
   --sl-text-h1: var(--sl-text-4xl);
-  --sl-text-h2: var(--sl-text-3xl);
-  --sl-text-h3: var(--sl-text-2xl);
-  --sl-text-h4: var(--sl-text-xl);
-  --sl-text-h5: var(--sl-text-lg);
-
-  /* --sl-text-sm: 15px; */
-  --sl-text-4xl: 2.25rem; /* 36px */
-  --sl-text-3xl: 1.75rem; /* 28px */
-
-  --sl-text-code: var(--sl-text-sm);
-  --sl-text-code-sm: var(--sl-text-xs);
-
-  --sl-text-h1: var(--sl-text-4xl);
-  --sl-text-h2: var(--sl-text-3xl);
+  --sl-text-h2: var(--sl-text-2xl);
   --sl-text-h3: var(--sl-text-xl);
   --sl-text-h4: var(--sl-text-lg);
   --sl-text-h5: var(--sl-text-base);
+
+  --sl-text-code: var(--sl-text-sm);
+  --sl-text-code-sm: var(--sl-text-xs);
 
   --sl-line-height: 1.5;
   --sl-line-height-headings: 1.25;
@@ -154,6 +144,7 @@ ul ul li {
 
 .sl-markdown-content :is(p) {
   font-size: 17px;
+  margin-bottom: 0.25rem;
 }
 
 .sl-markdown-content.sl-markdown-content + p {
@@ -167,6 +158,11 @@ ul ul li {
   color: var(--sl-color-white);
   line-height: var(--sl-line-height-headings);
   font-weight: 600;
+  letter-spacing: -0.02rem;
+}
+
+.sl-markdown-content :is(h2):not(:where(.not-content *)) + p {
+  margin-top: 0.35rem;
 }
 
 .content-panel.content-panel {
